code/python/IssueTracker/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Issue Tracker client library for Python

[![API Version](https://img.shields.io/badge/api-v1.4.0-blue)](https://developer.factset.com/api-catalog/issue-tracker-api)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.IssueTracker/0.5.0)](https://pypi.org/project/fds.sdk.IssueTracker/v/0.5.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

This API is used to file issues

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.4.0
- SDK version: 0.5.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.IssueTracker==0.5.0
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.IssueTracker==0.5.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.7+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.9.7
      pyenv shell 3.9.7
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.IssueTracker
from fds.sdk.IssueTracker.api import attachment_api
from fds.sdk.IssueTracker.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.IssueTracker.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.IssueTracker.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.IssueTracker.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = attachment_api.AttachmentApi(api_client)
    id = "id_example" # str | identity value of file attachment
    name = "name_example" # str | name of the file

    try:
        # get the matched file attachment
        # example passing only required values which don't have defaults set
        api_response = api_instance.get_file_attachment(id, name)

        pprint(api_response)
    except fds.sdk.IssueTracker.ApiException as e:
        print("Exception when calling AttachmentApi->get_file_attachment: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # get the matched file attachment
    #     api_response, http_status_code, response_headers = api_instance.get_file_attachment_with_http_info(id, name)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.IssueTracker.ApiException as e:
    #     print("Exception when calling AttachmentApi->get_file_attachment: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # get the matched file attachment
    #     async_result = api_instance.get_file_attachment_async(id, name)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.IssueTracker.ApiException as e:
    #     print("Exception when calling AttachmentApi->get_file_attachment: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # get the matched file attachment
    #     async_result = api_instance.get_file_attachment_with_http_info_async(id, name)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.IssueTracker.ApiException as e:
    #     print("Exception when calling AttachmentApi->get_file_attachment: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.IssueTracker

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.IssueTracker.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.IssueTracker

configuration = fds.sdk.IssueTracker.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.IssueTracker

configuration = fds.sdk.IssueTracker.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.IssueTracker

configuration = fds.sdk.IssueTracker.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/issue-tracker/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AttachmentApi* | [**get_file_attachment**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/AttachmentApi.md#get_file_attachment) | **GET** /attachments/{id}/{name} | get the matched file attachment
*AttachmentApi* | [**get_file_extensions**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/AttachmentApi.md#get_file_extensions) | **GET** /attachments/file-extensions | Allowed file types GET endpoint
*AttachmentApi* | [**post_file_attachment**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/AttachmentApi.md#post_file_attachment) | **POST** /attachments | Post file attachment to Issue Tracker Issue or comment
*IssueApi* | [**get_issue**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/IssueApi.md#get_issue) | **GET** /issues/{id} | Get the matched issue details
*IssueApi* | [**patch_issue**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/IssueApi.md#patch_issue) | **PATCH** /issues/{id} | Update severity and subject of issue or productId and categoryId of issue
*IssueApi* | [**post_issue**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/IssueApi.md#post_issue) | **POST** /issues | Creates a Issue Tracker issue
*IssueApi* | [**post_reply**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/IssueApi.md#post_reply) | **POST** /issues/{id}/comments | post comment to Issue Tracker issue


## Documentation For Models

 - [Attachment](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/Attachment.md)
 - [AttachmentResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/AttachmentResponse.md)
 - [Comment](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/Comment.md)
 - [CommentRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/CommentRequest.md)
 - [CommentRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/CommentRequestData.md)
 - [Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/Error.md)
 - [ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/ErrorResponse.md)
 - [FileExtension](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/FileExtension.md)
 - [IdResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/IdResponse.md)
 - [IdResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/IdResponseData.md)
 - [Issue](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/Issue.md)
 - [IssueData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/IssueData.md)
 - [IssueRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/IssueRequest.md)
 - [IssueRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/IssueRequestData.md)
 - [UpdateIssueRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/UpdateIssueRequest.md)
 - [UpdateIssueRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/IssueTracker/v1/docs/UpdateIssueRequestData.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.IssueTracker.apis and fds.sdk.IssueTracker.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.IssueTracker.api.default_api import DefaultApi`
- `from fds.sdk.IssueTracker.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.IssueTracker
from fds.sdk.IssueTracker.apis import *
from fds.sdk.IssueTracker.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2025 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

